--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "sass": "^1.45.1",
     "scss": "^0.2.4",
+    "toast": "^0.3.47",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
